# VK9

./: .gitignore  BUILD.md  LICENSE  LICENSE.md  README.md  SchaeferGL.sln  SchaeferGL.tags  SchaeferGL.workspace  SchaeferGL.workspace.christopher_joseph_dean_schaefer  SchaeferGL.workspace.session  SchaeferGL_wsp.mk  UpgradeLog.htm  VK9.sln  build-win32.txt  build-win64.txt  meson.build  meson_options.txt  package-release.sh
.codelite/: SchaeferGL.session
Backup/: SchaeferGL.sln
SchaeferGL-Library/: BufferManager.cpp  BufferManager.h  C9.cpp  C9.h  CBaseTexture9.cpp  CBaseTexture9.h  CCubeTexture9.cpp  CCubeTexture9.h  CDevice9.cpp  CDevice9.h  CIndexBuffer9.cpp  CIndexBuffer9.h  COpenGL9.cpp  COpenGL9.h  COpenGLBaseTexture9.cpp  COpenGLBaseTexture9.h  COpenGLCubeTexture9.cpp  COpenGLCubeTexture9.h  COpenGLDevice9.cpp  COpenGLDevice9.h  COpenGLIndexBuffer9.cpp  COpenGLIndexBuffer9.h  COpenGLPixelShader9.cpp  COpenGLPixelShader9.h  COpenGLQuery9.cpp  COpenGLQuery9.h  COpenGLResource9.cpp  COpenGLResource9.h  COpenGLSurface9.cpp  COpenGLSurface9.h  COpenGLTexture9.cpp  COpenGLTexture9.h  COpenGLTypes.cpp  COpenGLTypes.h  COpenGLUnknown.cpp  COpenGLUnknown.h  COpenGLVertexBuffer9.cpp  COpenGLVertexBuffer9.h  COpenGLVertexDeclaration9.cpp  COpenGLVertexDeclaration9.h  (+86 more)
SchaeferGL-Library/Shaders/: VertexBuffer.frag  VertexBuffer.frag.spv  VertexBuffer.vert  VertexBuffer.vert.spv
SchaeferGL-Library/togl/: rendermechanism.h
SchaeferGL-Library/togl/linuxwin/: cglmbuffer.cpp  cglmbuffer.h  cglmfbo.cpp  cglmfbo.h  cglmprogram.cpp  cglmprogram.h  cglmquery.cpp  cglmquery.h  cglmtex.cpp  cglmtex.h  dx9asmtogl.cpp  dx9asmtogl.h  dx9asmtogl2.cpp  dx9asmtogl2.h  dxabstract.cpp  dxabstract.h  dxabstract_types.h  glbase.h  glentrypoints.cpp  glentrypoints.h  glmdebug.h  glmdisplay.h  glmdisplaydb.h  glmgr.cpp  glmgr.h  glmgr_flush.inl  glmgrbasics.cpp  glmgrbasics.h  glmgrext.h  intelglmallocworkaround.cpp  utlbuffer.cpp  utlbuffer.h
SchaeferGL-Tests/: Main.cpp  Resource.h  SchaeferGL-Tests.h  SchaeferGL-Tests.mk  SchaeferGL-Tests.project  SchaeferGL-Tests.rc  SchaeferGL-Tests.vcproj  SchaeferGL-Tests.vcxproj  SchaeferGL-Tests.vcxproj.filters  stdafx.cpp  stdafx.h
Tests/: Tests.mk  Tests.project  main.cpp
VK9-Library/: BufferManager.cpp  BufferManager.cpp~RFf792aa89.TMP  BufferManager.h  BufferManager.h~RF570869d3.TMP  C9.cpp  C9.h  CBaseTexture9.cpp  CBaseTexture9.h  CCubeTexture9.cpp  CCubeTexture9.h  CDevice9.cpp  CDevice9.h  CIndexBuffer9.cpp  CIndexBuffer9.h  CPixelShader9.cpp  CPixelShader9.h  CQuery9.cpp  CQuery9.h  CRenderTargetSurface9.cpp  CRenderTargetSurface9.h  CResource9.cpp  CResource9.h  CStateBlock9.cpp  CStateBlock9.h  CSurface9.cpp  CSurface9.cpp~RF56828e8.TMP  CSurface9.h  CSwapChain9.cpp  CSwapChain9.h  CTexture9.cpp  CTexture9.h  CTypes.cpp  CTypes.h  CUnknown.cpp  CUnknown.h  CVertexBuffer9.cpp  CVertexBuffer9.h  CVertexDeclaration9.cpp  CVertexDeclaration9.h  CVertexShader9.cpp  (+66 more)
VK9-Library/My Amplifier XE Results - VK9-Library/: My Amplifier XE Results - VK9-Library.amplxeproj
VK9-Library/Shaders/: Constants  FixedFunctions  Functions  GlobalIllumination  Structures  VertexBuffer.frag  VertexBuffer.frag.spv  VertexBuffer.vert  VertexBuffer.vert.spv  VertexBuffer_XYZ.frag  VertexBuffer_XYZ.frag.h  VertexBuffer_XYZ.frag.spv  VertexBuffer_XYZ.vert  VertexBuffer_XYZ.vert.h  VertexBuffer_XYZ.vert.spv  VertexBuffer_XYZRHW.vert  VertexBuffer_XYZRHW.vert.h  VertexBuffer_XYZRHW.vert.spv  VertexBuffer_XYZRHW_DIFFUSE.vert  VertexBuffer_XYZRHW_DIFFUSE.vert.h  VertexBuffer_XYZRHW_DIFFUSE.vert.spv  VertexBuffer_XYZRHW_DIFFUSE_TEX1.vert  VertexBuffer_XYZRHW_DIFFUSE_TEX1.vert.h  VertexBuffer_XYZRHW_DIFFUSE_TEX1.vert.spv  VertexBuffer_XYZRHW_DIFFUSE_TEX2.vert  VertexBuffer_XYZRHW_DIFFUSE_TEX2.vert.h  VertexBuffer_XYZRHW_DIFFUSE_TEX2.vert.spv  VertexBuffer_XYZRHW_TEX1.vert  VertexBuffer_XYZRHW_TEX1.vert.h  VertexBuffer_XYZRHW_TEX1.vert.spv  VertexBuffer_XYZRHW_TEX2.vert  VertexBuffer_XYZRHW_TEX2.vert.h  VertexBuffer_XYZRHW_TEX2.vert.spv  VertexBuffer_XYZ_DIFFUSE.frag  VertexBuffer_XYZ_DIFFUSE.frag.h  VertexBuffer_XYZ_DIFFUSE.frag.spv  VertexBuffer_XYZ_DIFFUSE.geom  VertexBuffer_XYZ_DIFFUSE.geom.h  VertexBuffer_XYZ_DIFFUSE.geom.spv  VertexBuffer_XYZ_DIFFUSE.vert  (+61 more)
VK9-Library/fxdis/: dxbc.h  dxbc_assemble.cpp  dxbc_parse.cpp  sm4.h  utils.h
VK9-Library/pch/: stdafx.cpp  stdafx.h
VK9-Tests/: Main.cpp  Resource.h  SchaeferGL-Tests.mk  SchaeferGL-Tests.vcxproj  SchaeferGL-Tests.vcxproj.filters  VK9-Tests.aps  VK9-Tests.project  VK9-Tests.rc  VK9-Tests.vcproj  VK9-Tests.vcxproj  VK9-Tests.vcxproj.filters  meson.build  pixel_shader.psh  stdafx.h
VK9-Tests/My Amplifier XE Results - VK9-Tests/: My Amplifier XE Results - VK9-Tests.amplxeproj
dep32/: boost.sh  vulkan-1.pc
dep64/: boost.sh  eigen.pc  spirv.pc  vulkan-1.pc
libschaefergl/: D3D9.cpp  D3D9.h  GalliumD3DBaseTexture9.cpp  GalliumD3DBaseTexture9.h  GalliumD3DResource9.cpp  GalliumD3DResource9.h  GalliumD3DUnknown.cpp  GalliumD3DUnknown.h  galliumd3_d9.cpp  galliumd3_d9.h  galliumd3d_device9.cpp  galliumd3d_device9.h  guid.h  i_direct3_d9.cpp  i_direct3_d9.h  i_direct3d_base_texture9.cpp  i_direct3d_base_texture9.h  i_direct3d_cube_texture9.cpp  i_direct3d_cube_texture9.h  i_direct3d_device9.cpp  i_direct3d_device9.h  i_direct3d_index_buffer9.cpp  i_direct3d_index_buffer9.h  i_direct3d_pixel_shader9.cpp  i_direct3d_pixel_shader9.h  i_direct3d_query9.cpp  i_direct3d_query9.h  i_direct3d_resource9.cpp  i_direct3d_resource9.h  i_direct3d_state_block9.cpp  i_direct3d_state_block9.h  i_direct3d_surface9.cpp  i_direct3d_surface9.h  i_direct3d_swap_chain9.cpp  i_direct3d_swap_chain9.h  i_direct3d_texture9.cpp  i_direct3d_texture9.h  i_direct3d_vertex_buffer9.cpp  i_direct3d_vertex_buffer9.h  i_direct3d_vertex_declaration9.cpp  (+14 more)
wine_utils/: meson.build  setup_vk9.sh.in  setup_vk9.verb
