shader_src = [
  'VertexBuffer_XYZ.frag',
  'VertexBuffer_XYZ.vert',
  'VertexBuffer_XYZ_DIFFUSE.frag',
  'VertexBuffer_XYZ_DIFFUSE.geom',
  'VertexBuffer_XYZ_DIFFUSE.vert',
  'VertexBuffer_XYZ_DIFFUSE_TEX1.frag',
  'VertexBuffer_XYZ_DIFFUSE_TEX1.vert',
  'VertexBuffer_XYZ_DIFFUSE_TEX2.frag',
  'VertexBuffer_XYZ_DIFFUSE_TEX2.vert',
  'VertexBuffer_XYZ_NORMAL.frag',
  'VertexBuffer_XYZ_NORMAL.vert',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE.frag',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE.vert',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE_TEX1.frag',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE_TEX1.vert',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE_TEX2.frag',
  'VertexBuffer_XYZ_NORMAL_DIFFUSE_TEX2.vert',
  'VertexBuffer_XYZRHW.vert',
  'VertexBuffer_XYZRHW_DIFFUSE.vert',
  'VertexBuffer_XYZRHW_DIFFUSE_TEX1.vert',
  'VertexBuffer_XYZRHW_DIFFUSE_TEX2.vert',
  'VertexBuffer_XYZRHW_TEX1.vert',
  'VertexBuffer_XYZRHW_TEX2.vert',
  'VertexBuffer_XYZ_NORMAL_TEX1.frag',
  'VertexBuffer_XYZ_NORMAL_TEX1.vert',
  'VertexBuffer_XYZ_NORMAL_TEX2.frag',
  'VertexBuffer_XYZ_NORMAL_TEX2.vert',
  'VertexBuffer_XYZ_TEX1.frag',
  'VertexBuffer_XYZ_TEX1.vert',
  'VertexBuffer_XYZ_TEX2.frag',
  'VertexBuffer_XYZ_TEX2.vert'
]

shader_spv = glsl_generator.process(shader_src)
